# HFold

./: .gitignore  CMakeLists.txt  Makefile  README.generate_cmdlineparser  README.md  bash_constraint.sh  bash_constraint2.sh  out.txt  out1.txt  setup.py
.github/workflows/: CondaUpload.yml  HFoldTest.yml  python-publish.yml
bindings/: pybind_module.cc  pybind_module.cpp
conda_recipe/: README.md  build.sh  meta.yaml
conda_recipe/patches/: ViennaRNA-v2.7.patch
pylib/: CMakeLists.txt  MANIFEST.in  README.md  build_vienna.sh  pyproject.toml  setup.py
pylib/bindings/: pybind_module.cpp
pylib/sample_inputs/: sample.txt
src/: HFold.cpp  HFold.ggo  HFold.hh  HFold.hpp  Hotspot.cpp  Result.cpp  Result.hh  Result.hpp  W_final.cpp  W_final.hpp  cmdline.cc  cmdline.cpp  cmdline.hh  cmdline.hpp  config.h  h_globals.hpp  h_struct.hpp  main.cpp  pseudo_loop.cpp  pseudo_loop.hpp  s_energy_matrix.cpp  s_energy_matrix.hpp  sparse_tree.cpp
test/: CMakeLists.txt  HFoldTests.cpp  README.md  test_example.cpp
test/tests/: HFoldTests.cpp  helper.cpp  helper.hpp  test_hfold.cpp
test/tests/expected_output/: traceback_cases_expected.txt  traceback_cases_subopt_expected.txt
test/tests/input/: traceback_cases.txt  traceback_cases_bad_formating.txt
