[build-system]
requires = [
  "scikit-build-core>=0.8.0",
  "pybind11>=2.11",
  "cmake>=3.10",
  "wheel"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build] 
cmake.source-dir = ".." # Parent directory of pylib
cmake.args = ["-DBUILD_PYTHON=ON", "-DENABLE_TESTS=OFF"]

[project]
name = "hfold"
version = "0.0.4"
authors = [{ name = "COBRALab" }]
description = "HFold: Python bindings for the HFold C++ library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Unix",
  "Operating System :: MacOS"
]

[tool.setuptools]
packages = ["hfold"]

[tool.cibuildwheel]
build = "*"
skip = "pp* *-musllinux*"
test-skip = "*"
archs = ["auto"]
before-build = "bash ./pylib/build_vienna.sh"
environment = {VIENNARNA_LIB = "/tmp/vienna-cache/lib", VIENNARNA_INCLUDE_DIR = "/tmp/vienna-cache/include" }